Bug 1025973 - Part 2: Do not pass JSContext to static webidl methods in non-worker case. r=bz